# scripts

./: .gitignore  Makefile  README.md  arxify.py  distribute.py  nose2.cfg  requirements.txt  setup.cfg
bash/: clean-boot.sh  extract-all.sh
bash/retro/: create-disk.sh  mount-disk.sh  umount-disk.sh
python/: arxify.py  distribute.py
tests/: test_arxify.py  test_distribute.py
