[metadata]
name = scripts
version = 1.0.0
description = Some scripts I use (python)
readme = README.md
requires_python = >=3.8
license = {file = "LICENSE"}
keywords = ["scripts"]

[options]
packages = python

[options.entry_points]
console_scripts =
    arxify = python.arxify:main
    distribute = python.distribute:main
